# system-dashboard

./: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: vs_code.json
.dart_tool/flutter_build/2cd8cf1d200577627a99d1c73decf1cd/: .filecache  debug_macos_bundle_flutter_assets.stamp  debug_macos_framework.stamp  kernel_snapshot.stamp  kernel_snapshot_native_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  native_assets.d  native_assets.stamp
.dart_tool/flutter_build/410b4f3494780067b983d760f466cddf/: .filecache  debug_macos_bundle_flutter_assets.stamp  debug_macos_framework.stamp  debug_unpack_macos.stamp  flutter_assets.d  kernel_snapshot.stamp  kernel_snapshot_native_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  native_assets.d  native_assets.stamp  outputs.json
ffi/mac/: CMakeLists.txt  battery_info.cpp  cpu_info.cpp  disk_info.cpp  gpu_info.cpp  mac_system_info.cpp  os_info.cpp  ram_info.cpp  running_app_info.cpp
ffi/mac/include/: battery_info.h  cpu_info.h  disk_info.h  free_cstr.h  gpu_info.h  os_info.h  ram_info.h  running_app_info.h  strdup_cstr.h
ffi/mac/utils/: strdup_cstr.cpp
ffi/new-windows/: CMakeLists.txt  battery_info.cpp  common.cpp  cpu_info.cpp  disk_info.cpp  fan_speed.cpp  gpu_info.cpp  os_info.cpp  ram_info.cpp  running_app_info.cpp  windows_system_info.cpp
ffi/new-windows/include/: battery_info.h  common.h  cpu_info.h  disk_info.h  fan_speed.h  gpu_info.h  os_info.h  ram_info.h  running_app_info.h  strdup_cstr.h
ffi/windows/: FileSystemInformation.cpp  NetworkInformation.cpp  System_Software_Information.cpp  system.cpp  win_system_info.cpp
lib/: main.dart
lib/components/: indicator.dart
lib/components/active_program_components/: program_title.dart
lib/components/battery_info_components/: battery_info_container.dart
lib/components/cpu_info_components/: cpu_info_container.dart
lib/components/disk_info_components/: disk_info_container.dart
lib/components/gpu_info_compoents/: gpu_info_container.dart
lib/components/os_info_componets/: os_info_container.dart
lib/components/ram_chart_components/: ram_legend.dart  ram_provider.dart
lib/components/ram_info_components/: ram_info_container.dart
lib/components/storage_chart_components/: storage_legend.dart  storage_provider.dart
lib/components/system_info_components/: hardware_info_secton.dart  info_row.dart  system_info_section.dart
lib/models/: active_program_model.dart  battery_info_model.dart  cpu_info_model.dart  disk_info_model.dart  gpu_info_model.dart  os_info_model.dart  ram_info_model.dart
lib/provider/: active_program_provider.dart  battery_info_provider.dart  cpu_info_provider.dart  cpu_provider.dart  disk_info_provider.dart  gpu_info_provider.dart  gpu_provider.dart  installed_apps_provider.dart  os_info_provider.dart  ram_info_provider.dart  ram_provider.dart  storage_provider.dart  system_info_provider.dart
lib/services/: ffi_service.dart  macos_system_info.dart
lib/test/: main.dart
lib/theme/: app_color.dart  container_color.dart  container_radius.dart  theme_provider.dart
lib/ui/mac/: home_page.dart  mac_os_entry.dart  mac_os_home_page.dart  specification_page.dart
lib/ui/window/: windows_home_page.dart
lib/utils/: dynamic_size.dart
lib/widgets/: active_programs_lists.dart  cpu_uses_chart.dart  gpu_uses_chart.dart  installed_applications.dart  ram_pie_chart.dart  storage_pie_chart.dart  system_info_container.dart
linux/runner/: my_application.cc
macos/: CMakeLists.txt
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
macos/system_info.app/Contents/MacOS/: libmac_system_info.dylib
web/: index.html
windows/runner/: Runner.rc
